<resources>
    <string name="app_name">Мир гармонии</string>
    <string name="title_activity_login">Вход</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_err">Ошибка!</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_not_exist_emailpwd_pair">Нет такой пары логин-пароль</string>
    <string name="error_user_banned">Пользователь заболкирован</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_make_apeal">Подать обращение</string>
    <string name="btn_fogot">Забыли пароль?</string>
    <string name="btn_register">Зарегистрироваться</string>
</resources>
